[metadata]
name = actuonix_lac
version = 0.1.0
author = Yang Cao
author_email = cyrilcaoyang@gmail.com
description = Python controller for Actuonix LAC and linear actuators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cyrilcaoyang/actuonix_lac
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.8
install_requires =
    pyusb>=1.3.1
    libusb>=1.0.28
